force-app/main/default/objects/PaymentMethod__c/PaymentMethod__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <label>Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>