force-app/main/default/objects/PaymentMethod__c/fields/AchAbaCode__c.field-meta.xml
<CustomField>
    <fullName>AchAbaCode__c</fullName>
    <label>Ach Aba Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>