force-app/main/default/objects/PaymentMethod__c/fields/AchAccountName__c.field-meta.xml
<CustomField>
    <fullName>AchAccountName__c</fullName>
    <label>Ach Account Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>