force-app/main/default/objects/PaymentMethod__c/fields/AchAccountNumberMask__c.field-meta.xml
<CustomField>
    <fullName>AchAccountNumberMask__c</fullName>
    <label>Ach Account Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>