force-app/main/default/objects/PaymentMethod__c/fields/AchAccountType__c.field-meta.xml
<CustomField>
    <fullName>AchAccountType__c</fullName>
    <label>Ach Account Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>