force-app/main/default/objects/PaymentMethod__c/fields/AchBankName__c.field-meta.xml
<CustomField>
    <fullName>AchBankName__c</fullName>
    <label>Ach Bank Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>