force-app/main/default/objects/PaymentMethod__c/fields/BankBranchCode__c.field-meta.xml
<CustomField>
    <fullName>BankBranchCode__c</fullName>
    <label>Bank Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>