force-app/main/default/objects/PaymentMethod__c/fields/BankCheckDigit__c.field-meta.xml
<CustomField>
    <fullName>BankCheckDigit__c</fullName>
    <label>Bank Check Digit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>