force-app/main/default/objects/PaymentMethod__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>Bank Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>