force-app/main/default/objects/PaymentMethod__c/fields/BankIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>BankIdentificationNumber__c</fullName>
    <label>Bank Identification Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>