force-app/main/default/objects/PaymentMethod__c/fields/BankTransferAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankTransferAccountName__c</fullName>
    <label>Bank Transfer Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>