force-app/main/default/objects/PaymentMethod__c/fields/BankTransferAccountNumberMask__c.field-meta.xml
<CustomField>
    <fullName>BankTransferAccountNumberMask__c</fullName>
    <label>Bank Transfer Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>