force-app/main/default/objects/PaymentMethod__c/fields/BankTransferAccountType__c.field-meta.xml
<CustomField>
    <fullName>BankTransferAccountType__c</fullName>
    <label>Bank Transfer Account Type</label>
    <length>11</length>
    <type>Text</type>
</CustomField>