force-app/main/default/objects/PaymentMethod__c/fields/BankTransferType__c.field-meta.xml
<CustomField>
    <fullName>BankTransferType__c</fullName>
    <label>Bank Transfer Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>