force-app/main/default/objects/PaymentMethod__c/fields/BusinessIdentificationCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessIdentificationCode__c</fullName>
    <label>Business Identification Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>