force-app/main/default/objects/PaymentMethod__c/fields/CreditCardExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>CreditCardExpirationMonth__c</fullName>
    <label>Credit Card Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>