force-app/main/default/objects/PaymentMethod__c/fields/CreditCardExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>CreditCardExpirationYear__c</fullName>
    <label>Credit Card Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>