force-app/main/default/objects/PaymentMethod__c/fields/CreditCardHolderName__c.field-meta.xml
<CustomField>
    <fullName>CreditCardHolderName__c</fullName>
    <label>Credit Card Holder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>