force-app/main/default/objects/PaymentMethod__c/fields/CreditCardMaskNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditCardMaskNumber__c</fullName>
    <label>Credit Card Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>