force-app/main/default/objects/PaymentMethod__c/fields/CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>CreditCardType__c</fullName>
    <label>Credit Card Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>