force-app/main/default/objects/PaymentMethod__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>