force-app/main/default/objects/PaymentMethod__c/fields/LastFailedSaleTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>LastFailedSaleTransactionDate__c</fullName>
    <label>Last Failed Sale Transaction Date</label>
    <type>DateTime</type>
</CustomField>