force-app/main/default/objects/PaymentMethod__c/fields/LastTransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastTransactionDateTime__c</fullName>
    <label>Last Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>