force-app/main/default/objects/PaymentMethod__c/fields/LastTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>LastTransactionStatus__c</fullName>
    <label>Last Transaction Status</label>
    <length>39</length>
    <type>Text</type>
</CustomField>