force-app/main/default/objects/PaymentMethod__c/fields/MandateID__c.field-meta.xml
<CustomField>
    <fullName>MandateID__c</fullName>
    <label>Mandate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>