force-app/main/default/objects/PaymentMethod__c/fields/PaymentMethodStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodStatus__c</fullName>
    <label>Payment Method Status</label>
    <length>6</length>
    <type>Text</type>
</CustomField>