force-app/main/default/objects/PaymentMethod__c/fields/PaypalBaid__c.field-meta.xml
<CustomField>
    <fullName>PaypalBaid__c</fullName>
    <label>Paypal BAID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>