force-app/main/default/objects/PaymentMethod__c/fields/PaypalEmail__c.field-meta.xml
<CustomField>
    <fullName>PaypalEmail__c</fullName>
    <label>Paypal Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>