force-app/main/default/objects/PaymentMethod__c/fields/PaypalPreapprovalKey__c.field-meta.xml
<CustomField>
    <fullName>PaypalPreapprovalKey__c</fullName>
    <label>Paypal Preapproval Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>