force-app/main/default/objects/PaymentMethod__c/fields/PaypalType__c.field-meta.xml
<CustomField>
    <fullName>PaypalType__c</fullName>
    <label>Paypal Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>